<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bacg"
    tools:context=".models.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25sp"
            android:paddingEnd="35dp"
            android:text="@string/xush_kelibsiz"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="normal" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:text="@string/autorizatsiyadan_o_tish_uchun_telefon_raqamingizi_kiriting"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/telefon_raqamingiz" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:fadingEdgeLength="15dp"
            android:minWidth="10dp"
            android:paddingStart="30dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <EditText
                android:id="@+id/number_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/f998"
                android:paddingStart="20dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="163dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/button_click"
                style="@style/CardView.Dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/kirish"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:textStyle="bold"
            android:id="@+id/google_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/email_orqali_kirish"
            android:textColor="#FF9800" />
    </LinearLayout>
</LinearLayout>